<resources>
    <string name="app_name">MillionProject</string>
    <string name="new_game">New Game</string>
    <string name="christmas">Christmas</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="anime">Anime</string>
    <string name="festival">Festival</string>
    <string name="ranking">ranking</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="textview">TextView</string>
    <string name="radiobutton">RadioButton</string>
    <string name="username_dialog_confirm_btn">Confirm</string>
    <string name="username_dialog_cancel_btn">Cancel</string>

</resources>
