<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:text="Theme: " />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/question_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:text="question_no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:src="@drawable/timer"></ImageView>

            <TextView
                android:id="@+id/question_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:textSize="20dp"
                android:text="0:0" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/question_title_image"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:src="@drawable/qa_icon"></ImageView>

    <TextView
        android:id="@+id/question_title"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:paddingLeft="10dp"
        android:text="@string/textview"
        android:textColor="@android:color/black"
        android:textSize="22dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

    </LinearLayout>
    <RadioGroup
        android:id="@+id/btn_group_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btn_answer_option1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radiobutton" />

        <RadioButton
            android:id="@+id/btn_answer_option2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radiobutton" />

        <RadioButton
            android:id="@+id/btn_answer_option3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radiobutton" />

        <RadioButton
            android:id="@+id/btn_answer_option4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radiobutton" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_submit_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <Button
        android:id="@+id/btn_next_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />
</LinearLayout>